--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<img src="https://github.com/justketi/justketi.com/blob/0b24556933ef8d641b7ddddb16f92135751953be/photo_2023-11-14_20-10-16.jpg">
+<img src="https://justketi.com/photo_2023-11-14_20-10-16.jpg">
