--- a/index.html
+++ b/index.html
@@ -1,2 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h2><i>Hey there!</i></h2>
+    <h1>I'm Ketino Kilasonia</h1>
+    <h3>Nice to see you here. <br> I'm UI/UX Designer.</h3>
+</body>
+</html>
+
 <img src="IMG_0810.jpg">
 <a href="src/about.html">About Me</a>
