--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-                        <h2><i>Hey there!</i></h2>
-                        <h1>I'm Ketino Kilasonia</h1>
-                        <h3>Nice to see you here. <br> I'm UI/UX Designer.</h3>
+<h2><i>Hey there!</i></h2>
+<h1>I'm Ketino Kilasonia</h1>
+<h3>Nice to see you here<br>I'm UI/UX Designer</h3>
 </body>
 </html>
 
-<img src="IMG_0810.jpg">
+<img src="IMG_0810.jpg" width="348,5" height="493">
 <a href="src/about.html">About Me</a>
