--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    <style>
+        body {
+            background-color: antiquewhite;
+        }
+    </style>
 <h2><i>Hey there!</i></h2>
 <h1>I'm Ketino Kilasonia</h1>
 <h3>Nice to see you here<br>I'm UI/UX Designer</h3>
