--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="src/style.css">
 </head>
+
 <body>
-    <style>
-        body {
-            background-color: antiquewhite;
-        }
-    </style>
+
 <h2><i>Hey there!</i></h2>
 <h1>I'm Ketino Kilasonia</h1>
 <h3>Nice to see you here<br>I'm UI/UX Designer</h3>
+
 </body>
 </html>
 
-<img src="IMG_0810.jpg" width="348,5" height="493">
+<img src/style.css="IMG_0810.jpg" width="348,5" height="493">
 <a href="src/about.html">About Me</a>
