--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@
 </body>
 </html>
 
-<img src/style.css="IMG_0810.jpg" width="348,5" height="493">
+<img img="IMG_0810.jpg" width="348,5" height="493"> 
 <a href="src/about.html">About Me</a>
