--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
 </body>
 </html>
 
-<img img="IMG_0810.jpg" width="348,5" height="493"> 
+
+<img src="IMG_0810.jpg" 
 <a href="src/about.html">About Me</a>
