--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 
 <body>
 
-<h2><i>Hey there!</i></h2>
+<h2 class="welcome"><i>Hey there!</i></h2>
 <h1>I'm Ketino Kilasonia</h1>
 <h3>Nice to see you here<br>I'm UI/UX Designer</h3>
+
+<img src="IMG_0810.jpg" alt="Myself" width="348,5" height="493">
 
 </body>
 </html>
