--- a/index.html
+++ b/index.html
@@ -15,5 +15,13 @@
 
 <img src="IMG_0810.jpg" alt="Myself" width="348,5" height="493">
 
+
+<div class="box">
+    I was born in Georgia. Grew up in Ukrainw. Moved to Poland 8 years ago. 
+</div>
+<div class="box">
+    I was born in Georgia. Grew up in Ukrainw. Moved to Poland 8 years ago.
+</div>
+
 </body>
 </html>
