--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
 
 <div class="box">
-    I was born in Georgia. Grew up in Ukrainw. Moved to Poland 8 years ago. 
+    I was born in Georgia. Grew up in Ukraine. Moved to Poland 8 years ago. 
 </div>
 <div class="box">
-    I was born in Georgia. Grew up in Ukrainw. Moved to Poland 8 years ago.
+    I was born in Georgia. Grew up in Ukraine. Moved to Poland 8 years ago.
 </div>
 
 </body>
