--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h1>I'm Ketino Kilasonia</h1>
 <h3>Nice to see you here<br>I'm UI/UX Designer</h3>
 
-<img src="IMG_0810.jpg" alt="Myself" width="348,5" height="493">
+<img src="IMG_0810.jpg" alt="Myself">
 
 
 <div class="box">
